add table to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assignment 5</title>
 </head>
 <body>
-    
+    <table id="table" draggable="false"></table>
 </body>
 <script type="text/javascript" src="./script.js"></script>
 </html>
