--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 5</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css"/>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <nav
+    class="navbar has-shadow"
+    role="navigation"
+    aria-label="main navigation"
+    >
+      <div class="navbar-start">
+        <div class="navbar-item">
+          <div class="buttons">
+            <div class="button is-success" onClick=""></div> // add function
+              Add Row
+            </div>
+            <hr class="navbar-divider">
+            <div class="button is-warning" onClick=""> // add function
+              Add Column
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <div class="button is-success" onClick=""> // add function
+              Remove row
+            </div>
+            <hr class="navbar-divider">
+            <div class="button is-warning" onClick=""> // add function
+              Remove column
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    
     <table id="table" draggable="false"></table>
 </body>
 <script type="text/javascript" src="./script.js"></script>
