Create add column and add row functions

--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
       <div class="navbar-start">
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-success" onClick=""></div> // add function
-              Add Row
+            <div class="button is-success" onClick="addRow()">Add Row</div>
             </div>
             <hr class="navbar-divider">
-            <div class="button is-warning" onClick=""> // add function
-              Add Column
+            <div class="button is-warning" onClick="addColumn()"> Add column
             </div>
           </div>
         </div>
@@ -42,6 +40,8 @@
     </nav>
     
     <table id="table" draggable="false"></table>
+    <div id="container"></div>
+    
 </body>
 <script type="text/javascript" src="./script.js"></script>
 </html>
