--- a/index.html
+++ b/index.html
@@ -16,26 +16,22 @@
       <div class="navbar-start">
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-light" onClick="">
-              Add Row
-            </div>
+            <div class="button is-light" onClick="">Add Row</div>
             <hr class="navbar-divider">
-            <div class="button is-light" onClick="">
-              Add Column
-            </div>
+            <div class="button is-light" onClick="">Add Column</div>
           </div>
         </div>
       </div>
       <div>
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-success" onclick="">
+            <div class="button is-black" onclick="">
               Fill All Cells
             </div>
-            <div class="button is-warning" onclick="">
+            <div class="button is-black" onclick="">
               Fill Uncolored Cells
             </div>
-            <div class="button is-danger" onClick="">
+            <div class="button is-black" onClick="">
               Clear Cells
             </div>
             <div class="navbar-item has-dropdown is-hoverable">
@@ -54,18 +50,12 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-dark" onClick="addRow()">
-              Remove Row
-            </div>
-            <hr class="navbar-divider">
-            <div class="button is-dark" onClick="addColumn()">
-              Remove Column
-            </div>
+            <div class="button is-dark" onClick=""> Remove Row </div>
+            <div class="button is-dark" onClick=""> Remove Column </div>
           </div>
         </div>
       </div>
     </nav>
-    
     <table id="table" draggable="false"></table>
 </body>
 <script type="text/javascript" src="./script.js"></script>
