Add Row/Col option to script.js

--- a/index.html
+++ b/index.html
@@ -16,14 +16,9 @@
       <div class="navbar-start">
         <div class="navbar-item">
           <div class="buttons">
-
-            <div class="button is-success" onClick="addRow()">Add Row</div>
-            </div>
+            <div class="button is-light" onClick="addRow();">Add Row</div>
             <hr class="navbar-divider">
-            <div class="button is-warning" onClick="addColumn()"> Add column
-
-            </div>
-
+            <div class="button is-light" onClick="addColumn()">Add Column</div>
           </div>
         </div>
       </div>
@@ -55,15 +50,14 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-dark" onClick=""> Remove Row </div>
-            <div class="button is-dark" onClick=""> Remove Column </div>
+            <div class="button is-dark" onClick=""> Delete Row </div>
+            <div class="button is-dark" onClick=""> Delete Column </div>
           </div>
         </div>
       </div>
     </nav>
     <table id="table" draggable="false"></table>
     <div id="container"></div>
-    
 </body>
 <script type="text/javascript" src="./script.js"></script>
 </html>
