created delete column and delete row

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <div class="button is-dark" onClick=""> Delete Row </div>
-            <div class="button is-dark" onClick=""> Delete Column </div>
+            <div class="button is-dark" onClick="removeRow()"> Delete Row </div>
+            <div class="button is-dark" onClick="removeCol()"> Delete Column </div>
           </div>
         </div>
       </div>
